Migrate to new JSONObject/JSONArray (#208)