@@ -15,8 +15,8 @@ import org.apache.commons.io.filefilter.IOFileFilter;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.json.old.JSONArray;
-import org.json.old.JSONObject;
+import org.json.JSONArray;
+import org.json.JSONObject;
 import org.junit.AfterClass;
 import org.junit.Assert;
 import org.junit.Before;
@@ -221,6 +221,15 @@ public class SequenceIntegrationTests
         protected Boolean _isExternalPipelineEnabled = null;
 
         protected static final Logger _log = LogManager.getLogger(AbstractPipelineTestCase.class);
+
+        protected void writeJobLogToLabKeyLog(File log, String jobName) throws IOException
+        {
+            _log.error("Error processing job: " + jobName);
+            try (BufferedReader r = Readers.getReader(log))
+            {
+                r.lines().forEach(_log::error);
+            }
+        }
 
         protected static boolean doSkipCleanup()
         {
@@ -780,13 +789,21 @@ public class SequenceIntegrationTests
             expectedOutputs.add(new File(basedir, "sequenceImport.json"));
             expectedOutputs.add(new File(basedir, "sequenceSupport.json.gz"));
             expectedOutputs.add(new File(basedir, basedir.getName() + ".pipe.xar.xml"));
-            expectedOutputs.add(new File(basedir, jobName + ".log"));
-            verifyFileOutputs(basedir, expectedOutputs);
-            verifyFileInputs(basedir, fileNames, config, prefix);
+            File log = new File(basedir, jobName + ".log");
+            expectedOutputs.add(log);
+            try
+            {
+                verifyFileOutputs(basedir, expectedOutputs);
+                verifyFileInputs(basedir, fileNames, config, prefix);
+                validateReadsets(jobs, config);
 
-            validateReadsets(jobs, config);
-
-            Assert.assertEquals("Incorrect read number", 3260L, FastqUtils.getSequenceCount(fq));
+                Assert.assertEquals("Incorrect read number", 3260L, FastqUtils.getSequenceCount(fq));
+            }
+            catch (Exception e)
+            {
+                writeJobLogToLabKeyLog(log, jobName);
+                throw e;
+            }
         }
 
         @Test
@@ -818,13 +835,21 @@ public class SequenceIntegrationTests
             expectedOutputs.add(new File(basedir, "sequenceImport.json"));
             expectedOutputs.add(new File(basedir, "sequenceSupport.json.gz"));
             expectedOutputs.add(new File(basedir, basedir.getName() + ".pipe.xar.xml"));
-            expectedOutputs.add(new File(basedir, jobName + ".log"));
-            verifyFileOutputs(basedir, expectedOutputs);
-            verifyFileInputs(basedir, fileNames, config, prefix);
+            File log = new File(basedir, jobName + ".log");
+            expectedOutputs.add(log);
+            try
+            {
+                verifyFileOutputs(basedir, expectedOutputs);
+                verifyFileInputs(basedir, fileNames, config, prefix);
+                validateReadsets(jobs, config);
 
-            validateReadsets(jobs, config);
-
-            Assert.assertEquals("Incorrect read number", 211L, FastqUtils.getSequenceCount(fq));
+                Assert.assertEquals("Incorrect read number", 211L, FastqUtils.getSequenceCount(fq));
+            }
+            catch (Exception e)
+            {
+                writeJobLogToLabKeyLog(log, jobName);
+                throw e;
+            }
         }
 
         private void runMergePipelineJob(String jobName, boolean deleteIntermediates, String prefix) throws Exception
@@ -954,15 +979,24 @@ public class SequenceIntegrationTests
             validateReadsets(jobs, config, 1);  //we expect one per job, total of 3
         }
         
-        private void verifyJob(File basedir, String jobName, Set<File> expectedOutputs, String[] fileNames, String prefix, JSONObject config)
+        private void verifyJob(File basedir, String jobName, Set<File> expectedOutputs, String[] fileNames, String prefix, JSONObject config) throws Exception
         {
-            expectedOutputs.add(new File(basedir, jobName + ".log"));
             expectedOutputs.add(new File(basedir, basedir.getName() + ".pipe.xar.xml"));
             expectedOutputs.add(new File(basedir, "sequenceImport.json"));
             expectedOutputs.add(new File(basedir, "sequenceSupport.json.gz"));
 
-            verifyFileOutputs(basedir, expectedOutputs);
-            verifyFileInputs(basedir, fileNames, config, prefix);
+            File log = new File(basedir, jobName + ".log");
+            expectedOutputs.add(log);
+            try
+            {
+                verifyFileOutputs(basedir, expectedOutputs);
+                verifyFileInputs(basedir, fileNames, config, prefix);
+            }
+            catch (Exception e)
+            {
+                writeJobLogToLabKeyLog(log, jobName);
+                throw e;
+            }
         }
 
         /**
@@ -1092,10 +1126,19 @@ public class SequenceIntegrationTests
             normalizationDir = new File(normalizationDir, prefix + FileUtil.getBaseName(DUAL_BARCODE_FILENAME));
             expectedOutputs.add(new File(normalizationDir, prefix + DUAL_BARCODE_FILENAME + ".gz"));
 
-            verifyFileOutputs(basedir, expectedOutputs);
-            verifyFileInputs(basedir, fileNames, config, prefix);
-            validateReadsets(jobs, config, 4);
-            validateBarcodeFastqs(expectedOutputs);
+            File log = new File(basedir, jobName + ".log");
+            try
+            {
+                verifyFileOutputs(basedir, expectedOutputs);
+                verifyFileInputs(basedir, fileNames, config, prefix);
+                validateReadsets(jobs, config, 4);
+                validateBarcodeFastqs(expectedOutputs);
+            }
+            catch (Exception e)
+            {
+                writeJobLogToLabKeyLog(log, jobName);
+                throw e;
+            }
         }
 
         private File getBaseDir(PipelineJob job)
@@ -1130,10 +1173,20 @@ public class SequenceIntegrationTests
             Set<File> expectedOutputs = getBarcodeOutputs(basedir, jobName, prefix);
             expectedOutputs.add(new File(basedir, prefix + "dualBarcodes_SIV.fastq.gz"));
 
-            verifyFileOutputs(basedir, expectedOutputs);
-            verifyFileInputs(basedir, fileNames, config, prefix);
-            validateReadsets(jobs, config, 4);
-            validateBarcodeFastqs(expectedOutputs);
+            File log = new File(basedir, jobName + ".log");
+            try
+            {
+                verifyFileOutputs(basedir, expectedOutputs);
+                verifyFileInputs(basedir, fileNames, config, prefix);
+                validateReadsets(jobs, config, 4);
+                validateBarcodeFastqs(expectedOutputs);
+            }
+            catch (Exception e)
+            {
+                writeJobLogToLabKeyLog(log, jobName);
+
+                throw e;
+            }
         }
 
         private void validateBarcodeFastqs(Set<File> expectedOutputs) throws Exception
@@ -1183,14 +1236,23 @@ public class SequenceIntegrationTests
             expectedOutputs.add(new File(basedir, "sequenceImport.json"));
             expectedOutputs.add(new File(basedir, "sequenceSupport.json.gz"));
             expectedOutputs.add(new File(basedir, basedir.getName() + ".pipe.xar.xml"));
-            expectedOutputs.add(new File(basedir, jobName + ".log"));
             expectedOutputs.add(new File(basedir, prefix + PAIRED_FILENAME1));
             expectedOutputs.add(new File(basedir, prefix + PAIRED_FILENAME2));
 
-            verifyFileOutputs(basedir, expectedOutputs);
-            verifyFileInputs(basedir, fileNames, config, prefix);
+            File log = new File(basedir, jobName + ".log");
+            expectedOutputs.add(log);
+            try
+            {
+                verifyFileOutputs(basedir, expectedOutputs);
+                verifyFileInputs(basedir, fileNames, config, prefix);
+                validateReadsets(jobs, config);
+            }
+            catch (Exception e)
+            {
+                writeJobLogToLabKeyLog(log, jobName);
 
-            validateReadsets(jobs, config);
+                throw e;
+            }
         }
 
         /**
@@ -1229,17 +1291,25 @@ public class SequenceIntegrationTests
             expectedOutputs.add(new File(basedir, "sequenceImport.json"));
             expectedOutputs.add(new File(basedir, "sequenceSupport.json.gz"));
             expectedOutputs.add(new File(basedir, basedir.getName() + ".pipe.xar.xml"));
-            expectedOutputs.add(new File(basedir, jobName + ".log"));
 
             expectedOutputs.add(new File(basedir, prefix + UNZIPPED_PAIRED_FILENAME1 + ".gz"));
             expectedOutputs.add(new File(basedir, prefix + UNZIPPED_PAIRED_FILENAME2 + ".gz"));
             expectedOutputs.add(new File(basedir, prefix + PAIRED_FILENAME1));
             expectedOutputs.add(new File(basedir, prefix + PAIRED_FILENAME2));
 
-            verifyFileOutputs(basedir, expectedOutputs);
-            verifyFileInputs(basedir, fileNames, config, prefix);
-
-            validateReadsets(jobs, config);
+            File log = new File(basedir, jobName + ".log");
+            expectedOutputs.add(log);
+            try
+            {
+                verifyFileOutputs(basedir, expectedOutputs);
+                verifyFileInputs(basedir, fileNames, config, prefix);
+                validateReadsets(jobs, config);
+            }
+            catch (Exception e)
+            {
+                writeJobLogToLabKeyLog(log, jobName);
+                throw e;
+            }
         }
 
         /**
@@ -1278,7 +1348,6 @@ public class SequenceIntegrationTests
             expectedOutputs.add(new File(basedir, "sequenceImport.json"));
             expectedOutputs.add(new File(basedir, "sequenceSupport.json.gz"));
             expectedOutputs.add(new File(basedir, basedir.getName() + ".pipe.xar.xml"));
-            expectedOutputs.add(new File(basedir, jobName + ".log"));
 
             expectedOutputs.add(new File(basedir, prefix + UNZIPPED_PAIRED_FILENAME1 + ".gz"));
             expectedOutputs.add(new File(basedir, prefix + UNZIPPED_PAIRED_FILENAME2 + ".gz"));
@@ -1286,10 +1355,20 @@ public class SequenceIntegrationTests
             expectedOutputs.add(new File(basedir, prefix + PAIRED_FILENAME1));
             expectedOutputs.add(new File(basedir, prefix + PAIRED_FILENAME2));
 
-            verifyFileOutputs(basedir, expectedOutputs);
-            verifyFileInputs(basedir, fileNames, config, prefix);
+            File log = new File(basedir, jobName + ".log");
+            expectedOutputs.add(log);
+            try
+            {
+                verifyFileOutputs(basedir, expectedOutputs);
+                verifyFileInputs(basedir, fileNames, config, prefix);
+                validateReadsets(jobs, config);
+            }
+            catch (Exception e)
+            {
+                writeJobLogToLabKeyLog(log, jobName);
 
-            validateReadsets(jobs, config);
+                throw e;
+            }
         }
 
         private void validateReadsets(Collection<PipelineJob> jobs, JSONObject config) throws Exception
@@ -1343,11 +1422,15 @@ public class SequenceIntegrationTests
                 Assert.assertEquals("Incorrect sampleid", o.getInt("sampleid"), m.getSampleId().intValue());
                 Assert.assertEquals("Incorrect subjectId", o.getString("subjectid"), m.getSubjectId());
                 SimpleDateFormat format = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'");
-                Assert.assertEquals("Incorrect sampleDate", o.getString("sampledate"), m.getSampleDate() == null ?  null : format.format(m.getSampleDate()));
+                Assert.assertEquals("Incorrect sampleDate", o.optString("sampledate", null), m.getSampleDate() == null ?  null : format.format(m.getSampleDate()));
 
                 String fileGroup = o.getString("fileGroupId");
-                List<String> keys = config.keySet().stream().filter(x -> x.startsWith("fileGroup_")).filter(x -> fileGroup.equals(new JSONObject(config.getString(x)).getString("name"))).collect(Collectors.toList());
-                Set<String> platformUnits = keys.stream().map(x -> new JSONObject(config.getString(x)).getJSONArray("files").toJSONObjectArray()).flatMap(Arrays::stream).map(y -> y.getString("platformUnit") == null ? y.getString("file1") : y.getString("platformUnit")).collect(Collectors.toSet());
+                List<String> keys = config.keySet().stream().filter(x -> x.startsWith("fileGroup_")).filter(x -> fileGroup.equals(new JSONObject(config.getString(x)).getString("name"))).toList();
+                Set<String> platformUnits = keys.stream().
+                        map(x -> new JSONObject(config.getString(x)).getJSONArray("files").toList()).
+                        flatMap(List::stream).
+                        map(x -> (Map<?,?>)x).
+                        map(y -> y.get("platformUnit") == null ? y.get("file1") : y.get("platformUnit")).map(Object::toString).collect(Collectors.toSet());
                 Assert.assertFalse("No matching readdata", platformUnits.isEmpty());
 
                 Assert.assertEquals("Incorrect number of readdata", m.getReadData().size(), platformUnits.size());
@@ -1401,12 +1484,12 @@ public class SequenceIntegrationTests
             throw new RuntimeException("Unable to find working dir for readset: " + rs.getRowId());
         }
 
-        protected void validateAlignmentJob(Set<PipelineJob> jobs, Collection<String> additionalFiles, SequenceReadsetImpl rs, Integer aligned, Integer unaligned) throws PipelineJobException
+        protected void validateAlignmentJob(Set<PipelineJob> jobs, Collection<String> additionalFiles, SequenceReadsetImpl rs, Integer aligned, Integer unaligned) throws Exception
         {
             validateAlignmentJob(jobs, additionalFiles, rs, aligned, unaligned, true);
         }
 
-        protected void validateAlignmentJob(Set<PipelineJob> jobs, Collection<String> additionalFiles, SequenceReadsetImpl rs, Integer aligned, Integer unaligned, boolean includeRefFiles) throws PipelineJobException
+        protected void validateAlignmentJob(Set<PipelineJob> jobs, Collection<String> additionalFiles, SequenceReadsetImpl rs, Integer aligned, Integer unaligned, boolean includeRefFiles) throws Exception
         {
             SequenceAlignmentJob job = getAlignmentJob(jobs, rs);
             File basedir = job.getAnalysisDirectory();
@@ -1435,9 +1518,18 @@ public class SequenceIntegrationTests
 
             expectedOutputs.add(new File(basedir, outDir + "/Alignment/idxstats.txt"));
 
-            validateInputs();
-            verifyFileOutputs(basedir, expectedOutputs);
-            validateAlignment(bam, aligned, unaligned);
+            File log = new File(basedir, job.getProtocolName() + ".log");
+            try
+            {
+                validateInputs();
+                verifyFileOutputs(basedir, expectedOutputs);
+                validateAlignment(bam, aligned, unaligned);
+            }
+            catch (Throwable e)
+            {
+                writeJobLogToLabKeyLog(log, job.getProtocolName());
+                throw e;
+            }
         }
 
         protected Collection<File> addDefaultAlignmentOutputs(File basedir, String jobName, SequenceReadsetImpl rs, String outDir)
